fix(a11y): font color contrast

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,8 +6,8 @@
   --spacing-xxlarge: 4rem;
 
   --text-primary: #ebebeb;
-  --text-secondary: #9a9a9a;
-  --text-tertiary: #c2c2c250;
+  --text-secondary: #b4b4b4;
+  --text-tertiary: #757575;
 
   --material-dark-chrome: #232323;
 }
